genGrammar/alang/ALangParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g 2012-06-25 07:47:14


package alang;  
  


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class ALangParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAM", "ID", "RELATIONALOP", "STRING", "INT", "FLOAT", "COMMENT", "WS", "'global:'", "';'", "'coroutine'", "'{'", "'}'", "'main'", "'if'", "'('", "')'", "'else'", "'while'", "'@'", "'yield'", "'='", "'+'", "'-'", "'*'", "'/'", "','"
    };
    public static final int EOF=-1;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int PROGRAM=4;
    public static final int ID=5;
    public static final int RELATIONALOP=6;
    public static final int STRING=7;
    public static final int INT=8;
    public static final int FLOAT=9;
    public static final int COMMENT=10;
    public static final int WS=11;

    // delegates
    // delegators


        public ALangParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ALangParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ALangParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g"; }


      private NamesTable names = new NamesTable();
      private ArrayList<String> errors  = new ArrayList<String>();
      private ArrayList<String> blocks = new ArrayList<String>();
      private String currentBlock="";
      private int idCurrentBlock=0;
      private TypeChecker typeChecker = new TypeChecker();
      
      public boolean haveErrors(){
        return !errors.isEmpty();
      }
      
      public ArrayList<String> getErrors(){
        return errors;
      }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:43:1: program : ( globalVariableDeclaration )? coroutineDeclaration main EOF ;
    public final ALangParser.program_return program() throws RecognitionException {
        ALangParser.program_return retval = new ALangParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF4=null;
        ALangParser.globalVariableDeclaration_return globalVariableDeclaration1 = null;

        ALangParser.coroutineDeclaration_return coroutineDeclaration2 = null;

        ALangParser.main_return main3 = null;


        Object EOF4_tree=null;

        try {
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:44:5: ( ( globalVariableDeclaration )? coroutineDeclaration main EOF )
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:44:8: ( globalVariableDeclaration )? coroutineDeclaration main EOF
            {
            root_0 = (Object)adaptor.nil();

            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:44:8: ( globalVariableDeclaration )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==12) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:44:8: globalVariableDeclaration
                    {
                    pushFollow(FOLLOW_globalVariableDeclaration_in_program66);
                    globalVariableDeclaration1=globalVariableDeclaration();

                    state._fsp--;

                    adaptor.addChild(root_0, globalVariableDeclaration1.getTree());

                    }
                    break;

            }

            pushFollow(FOLLOW_coroutineDeclaration_in_program69);
            coroutineDeclaration2=coroutineDeclaration();

            state._fsp--;

            adaptor.addChild(root_0, coroutineDeclaration2.getTree());
            pushFollow(FOLLOW_main_in_program72);
            main3=main();

            state._fsp--;

            adaptor.addChild(root_0, main3.getTree());
            EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_program74); 
            EOF4_tree = (Object)adaptor.create(EOF4);
            adaptor.addChild(root_0, EOF4_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class globalVariableDeclaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "globalVariableDeclaration"
    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:47:1: globalVariableDeclaration : 'global:' variableDeclarationList ';' ;
    public final ALangParser.globalVariableDeclaration_return globalVariableDeclaration() throws RecognitionException {
        ALangParser.globalVariableDeclaration_return retval = new ALangParser.globalVariableDeclaration_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal5=null;
        Token char_literal7=null;
        ALangParser.variableDeclarationList_return variableDeclarationList6 = null;


        Object string_literal5_tree=null;
        Object char_literal7_tree=null;


          currentBlock = "global";
          blocks.add(currentBlock);
          blocks.add(currentBlock);

        try {
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:57:5: ( 'global:' variableDeclarationList ';' )
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:57:7: 'global:' variableDeclarationList ';'
            {
            root_0 = (Object)adaptor.nil();

            string_literal5=(Token)match(input,12,FOLLOW_12_in_globalVariableDeclaration103); 
            string_literal5_tree = (Object)adaptor.create(string_literal5);
            adaptor.addChild(root_0, string_literal5_tree);

            pushFollow(FOLLOW_variableDeclarationList_in_globalVariableDeclaration105);
            variableDeclarationList6=variableDeclarationList();

            state._fsp--;

            adaptor.addChild(root_0, variableDeclarationList6.getTree());
            char_literal7=(Token)match(input,13,FOLLOW_13_in_globalVariableDeclaration107); 
            char_literal7_tree = (Object)adaptor.create(char_literal7);
            adaptor.addChild(root_0, char_literal7_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);


              blocks.remove(blocks.size()-1);
              this.currentBlock=blocks.get(blocks.size()-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "globalVariableDeclaration"

    public static class coroutineDeclaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "coroutineDeclaration"
    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:60:1: coroutineDeclaration : ( coroutineDeclarator )* ;
    public final ALangParser.coroutineDeclaration_return coroutineDeclaration() throws RecognitionException {
        ALangParser.coroutineDeclaration_return retval = new ALangParser.coroutineDeclaration_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ALangParser.coroutineDeclarator_return coroutineDeclarator8 = null;



        try {
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:61:5: ( ( coroutineDeclarator )* )
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:61:7: ( coroutineDeclarator )*
            {
            root_0 = (Object)adaptor.nil();

            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:61:7: ( coroutineDeclarator )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==14) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:61:7: coroutineDeclarator
            	    {
            	    pushFollow(FOLLOW_coroutineDeclarator_in_coroutineDeclaration124);
            	    coroutineDeclarator8=coroutineDeclarator();

            	    state._fsp--;

            	    adaptor.addChild(root_0, coroutineDeclarator8.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "coroutineDeclaration"

    public static class coroutineDeclarator_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "coroutineDeclarator"
    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:65:1: coroutineDeclarator : 'coroutine' ID '{' ( statement )* '}' ;
    public final ALangParser.coroutineDeclarator_return coroutineDeclarator() throws RecognitionException {
        ALangParser.coroutineDeclarator_return retval = new ALangParser.coroutineDeclarator_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal9=null;
        Token ID10=null;
        Token char_literal11=null;
        Token char_literal13=null;
        ALangParser.statement_return statement12 = null;


        Object string_literal9_tree=null;
        Object ID10_tree=null;
        Object char_literal11_tree=null;
        Object char_literal13_tree=null;

        try {
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:70:5: ( 'coroutine' ID '{' ( statement )* '}' )
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:70:8: 'coroutine' ID '{' ( statement )* '}'
            {
            root_0 = (Object)adaptor.nil();

            string_literal9=(Token)match(input,14,FOLLOW_14_in_coroutineDeclarator148); 
            string_literal9_tree = (Object)adaptor.create(string_literal9);
            adaptor.addChild(root_0, string_literal9_tree);

            ID10=(Token)match(input,ID,FOLLOW_ID_in_coroutineDeclarator151); 
            ID10_tree = (Object)adaptor.create(ID10);
            adaptor.addChild(root_0, ID10_tree);

            this.currentBlock="coroutine_"+(ID10!=null?ID10.getText():null); blocks.add(currentBlock);
            char_literal11=(Token)match(input,15,FOLLOW_15_in_coroutineDeclarator156); 
            char_literal11_tree = (Object)adaptor.create(char_literal11);
            adaptor.addChild(root_0, char_literal11_tree);

            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:70:98: ( statement )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID||LA3_0==18||(LA3_0>=22 && LA3_0<=24)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:70:98: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_coroutineDeclarator158);
            	    statement12=statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, statement12.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            char_literal13=(Token)match(input,16,FOLLOW_16_in_coroutineDeclarator161); 
            char_literal13_tree = (Object)adaptor.create(char_literal13);
            adaptor.addChild(root_0, char_literal13_tree);


                      if(!names.isExistCoroutine(this.currentBlock)){
                        names.addCoroutine(names.new Coroutine(this.currentBlock, (ID10!=null?ID10.getLine():0)));
                      }
                      else{
                        errors.add("line "+(ID10!=null?ID10.getLine():0)+": duplicated coroutine declaration "+(ID10!=null?ID10.getText():null));
                      }
                    

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);


              blocks.remove(blocks.size()-1);
              this.currentBlock=blocks.get(blocks.size()-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "coroutineDeclarator"

    public static class main_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "main"
    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:81:1: main : 'main' '{' ( statement )* '}' ;
    public final ALangParser.main_return main() throws RecognitionException {
        ALangParser.main_return retval = new ALangParser.main_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal14=null;
        Token char_literal15=null;
        Token char_literal17=null;
        ALangParser.statement_return statement16 = null;


        Object string_literal14_tree=null;
        Object char_literal15_tree=null;
        Object char_literal17_tree=null;


          this.currentBlock="main";
          blocks.add(currentBlock);

        try {
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:90:5: ( 'main' '{' ( statement )* '}' )
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:90:7: 'main' '{' ( statement )* '}'
            {
            root_0 = (Object)adaptor.nil();

            string_literal14=(Token)match(input,17,FOLLOW_17_in_main196); 
            string_literal14_tree = (Object)adaptor.create(string_literal14);
            adaptor.addChild(root_0, string_literal14_tree);

            char_literal15=(Token)match(input,15,FOLLOW_15_in_main198); 
            char_literal15_tree = (Object)adaptor.create(char_literal15);
            adaptor.addChild(root_0, char_literal15_tree);

            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:90:18: ( statement )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID||LA4_0==18||(LA4_0>=22 && LA4_0<=24)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:90:18: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_main200);
            	    statement16=statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, statement16.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            char_literal17=(Token)match(input,16,FOLLOW_16_in_main203); 
            char_literal17_tree = (Object)adaptor.create(char_literal17);
            adaptor.addChild(root_0, char_literal17_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);


              blocks.remove(blocks.size()-1);
              this.currentBlock=blocks.get(blocks.size()-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "main"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:94:1: statement : ( assign_op ';' | yield_op ';' | call_coroutine ';' | if_statement | while_statement );
    public final ALangParser.statement_return statement() throws RecognitionException {
        ALangParser.statement_return retval = new ALangParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal19=null;
        Token char_literal21=null;
        Token char_literal23=null;
        ALangParser.assign_op_return assign_op18 = null;

        ALangParser.yield_op_return yield_op20 = null;

        ALangParser.call_coroutine_return call_coroutine22 = null;

        ALangParser.if_statement_return if_statement24 = null;

        ALangParser.while_statement_return while_statement25 = null;


        Object char_literal19_tree=null;
        Object char_literal21_tree=null;
        Object char_literal23_tree=null;

        try {
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:95:5: ( assign_op ';' | yield_op ';' | call_coroutine ';' | if_statement | while_statement )
            int alt5=5;
            switch ( input.LA(1) ) {
            case ID:
                {
                alt5=1;
                }
                break;
            case 24:
                {
                alt5=2;
                }
                break;
            case 23:
                {
                alt5=3;
                }
                break;
            case 18:
                {
                alt5=4;
                }
                break;
            case 22:
                {
                alt5=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:95:7: assign_op ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_assign_op_in_statement221);
                    assign_op18=assign_op();

                    state._fsp--;

                    adaptor.addChild(root_0, assign_op18.getTree());
                    char_literal19=(Token)match(input,13,FOLLOW_13_in_statement223); 
                    char_literal19_tree = (Object)adaptor.create(char_literal19);
                    adaptor.addChild(root_0, char_literal19_tree);


                    }
                    break;
                case 2 :
                    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:96:7: yield_op ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_yield_op_in_statement231);
                    yield_op20=yield_op();

                    state._fsp--;

                    adaptor.addChild(root_0, yield_op20.getTree());
                    char_literal21=(Token)match(input,13,FOLLOW_13_in_statement233); 
                    char_literal21_tree = (Object)adaptor.create(char_literal21);
                    adaptor.addChild(root_0, char_literal21_tree);


                    }
                    break;
                case 3 :
                    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:97:7: call_coroutine ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_call_coroutine_in_statement241);
                    call_coroutine22=call_coroutine();

                    state._fsp--;

                    adaptor.addChild(root_0, call_coroutine22.getTree());
                    char_literal23=(Token)match(input,13,FOLLOW_13_in_statement243); 
                    char_literal23_tree = (Object)adaptor.create(char_literal23);
                    adaptor.addChild(root_0, char_literal23_tree);


                    }
                    break;
                case 4 :
                    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:98:7: if_statement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_if_statement_in_statement251);
                    if_statement24=if_statement();

                    state._fsp--;

                    adaptor.addChild(root_0, if_statement24.getTree());

                    }
                    break;
                case 5 :
                    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:99:7: while_statement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_while_statement_in_statement260);
                    while_statement25=while_statement();

                    state._fsp--;

                    adaptor.addChild(root_0, while_statement25.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class if_statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "if_statement"
    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:102:1: if_statement : 'if' '(' logical_expression ')' '{' ( statement )* '}' ( 'else' '{' ( statement )* '}' )? ;
    public final ALangParser.if_statement_return if_statement() throws RecognitionException {
        ALangParser.if_statement_return retval = new ALangParser.if_statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal26=null;
        Token char_literal27=null;
        Token char_literal29=null;
        Token char_literal30=null;
        Token char_literal32=null;
        Token string_literal33=null;
        Token char_literal34=null;
        Token char_literal36=null;
        ALangParser.logical_expression_return logical_expression28 = null;

        ALangParser.statement_return statement31 = null;

        ALangParser.statement_return statement35 = null;


        Object string_literal26_tree=null;
        Object char_literal27_tree=null;
        Object char_literal29_tree=null;
        Object char_literal30_tree=null;
        Object char_literal32_tree=null;
        Object string_literal33_tree=null;
        Object char_literal34_tree=null;
        Object char_literal36_tree=null;


          idCurrentBlock++; 
          currentBlock = Integer.toString(idCurrentBlock); 
          blocks.add(currentBlock);

        try {
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:112:5: ( 'if' '(' logical_expression ')' '{' ( statement )* '}' ( 'else' '{' ( statement )* '}' )? )
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:112:7: 'if' '(' logical_expression ')' '{' ( statement )* '}' ( 'else' '{' ( statement )* '}' )?
            {
            root_0 = (Object)adaptor.nil();

            string_literal26=(Token)match(input,18,FOLLOW_18_in_if_statement286); 
            string_literal26_tree = (Object)adaptor.create(string_literal26);
            adaptor.addChild(root_0, string_literal26_tree);

            char_literal27=(Token)match(input,19,FOLLOW_19_in_if_statement288); 
            char_literal27_tree = (Object)adaptor.create(char_literal27);
            adaptor.addChild(root_0, char_literal27_tree);

            pushFollow(FOLLOW_logical_expression_in_if_statement289);
            logical_expression28=logical_expression();

            state._fsp--;

            adaptor.addChild(root_0, logical_expression28.getTree());
            char_literal29=(Token)match(input,20,FOLLOW_20_in_if_statement290); 
            char_literal29_tree = (Object)adaptor.create(char_literal29);
            adaptor.addChild(root_0, char_literal29_tree);

            char_literal30=(Token)match(input,15,FOLLOW_15_in_if_statement292); 
            char_literal30_tree = (Object)adaptor.create(char_literal30);
            adaptor.addChild(root_0, char_literal30_tree);

            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:112:41: ( statement )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==ID||LA6_0==18||(LA6_0>=22 && LA6_0<=24)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:112:41: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_if_statement294);
            	    statement31=statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, statement31.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            char_literal32=(Token)match(input,16,FOLLOW_16_in_if_statement297); 
            char_literal32_tree = (Object)adaptor.create(char_literal32);
            adaptor.addChild(root_0, char_literal32_tree);

            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:112:56: ( 'else' '{' ( statement )* '}' )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==21) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:112:57: 'else' '{' ( statement )* '}'
                    {
                    string_literal33=(Token)match(input,21,FOLLOW_21_in_if_statement300); 
                    string_literal33_tree = (Object)adaptor.create(string_literal33);
                    adaptor.addChild(root_0, string_literal33_tree);

                    char_literal34=(Token)match(input,15,FOLLOW_15_in_if_statement302); 
                    char_literal34_tree = (Object)adaptor.create(char_literal34);
                    adaptor.addChild(root_0, char_literal34_tree);

                    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:112:68: ( statement )*
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==ID||LA7_0==18||(LA7_0>=22 && LA7_0<=24)) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:112:68: statement
                    	    {
                    	    pushFollow(FOLLOW_statement_in_if_statement304);
                    	    statement35=statement();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, statement35.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);

                    char_literal36=(Token)match(input,16,FOLLOW_16_in_if_statement307); 
                    char_literal36_tree = (Object)adaptor.create(char_literal36);
                    adaptor.addChild(root_0, char_literal36_tree);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);


              blocks.remove(blocks.size()-1);
              this.currentBlock=blocks.get(blocks.size()-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "if_statement"

    public static class while_statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "while_statement"
    // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:115:1: while_statement : 'while' '(' logical_expression ')' '{' ( statement )* '}' ;
    public final ALangParser.while_statement_return while_statement() throws RecognitionException {
        ALangParser.while_statement_return retval = new ALangParser.while_statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal37=null;
        Token char_literal38=null;
        Token char_literal40=null;
        Token char_literal41=null;
        Token char_literal43=null;
        ALangParser.logical_expression_return logical_expression39 = null;

        ALangParser.statement_return statement42 = null;


        Object string_literal37_tree=null;
        Object char_literal38_tree=null;
        Object char_literal40_tree=null;
        Object char_literal41_tree=null;
        Object char_literal43_tree=null;


          idCurrentBlock++; 
          currentBlock = Integer.toString(idCurrentBlock); 
          blocks.add(currentBlock);

        try {
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:125:5: ( 'while' '(' logical_expression ')' '{' ( statement )* '}' )
            // D:\\Programming\\PROJECTS\\Eclipse\\workspace\\ALang\\src\\alang\\ALang.g:125:7: 'while' '(' logical_expression ')' '{' ( statement )* '}'
            {
            root_0 = (Object)adaptor.nil();

            string_literal37=(Token)match(input,22,FOLLOW_22_in_while_statement334); 
            string_literal37_tree = (Object)adaptor.create(string_literal37);
            adaptor.addChild(root_0, string_literal37_tree);

            char_literal38=(Token)match(input,19,FOLLOW_19_in_while_statement336); 
            char_literal38_tree = (Object)adaptor.create(char_literal38);
            adaptor.addChild(root_0, char_literal38_tree);

            pushFollow(FOLLOW_logical_expression_in_while_statement337);
            logical_expression39=logical_expression();

            state._fsp--;
